Tweak to styling of logged in menu link and pro pill to ensure only the first name is truncated and not the 'pro' label

--- a/app/assets/stylesheets/responsive/_header_layout.scss
+++ b/app/assets/stylesheets/responsive/_header_layout.scss
@@ -363,8 +363,12 @@
     right: 0;
     top: 0;
     border: 0;
-    max-width: 14em;
+    max-width: 11em;
   }
+}
+
+.navigation .account-link--with-pro-pill {
+  padding-right: 3em;
 }
 
 .js-loaded {
